Update chapter1/03_Project_Building.md